# Tower-of-the-Sorcerer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  icon.rc
include/: Animation.h  Attribute.h  Entity.h  Game.h  GameState.h  Hitbox.h  MenuState.h  Monster.h  Movement.h  Player.h  Resource.h  Shade.h  State.h  Subtitle.h  Tilemap.h  game.h  state.h
resource/: map.json  mappp.tmj
resource/tilemap/: base.json  map.json  map.tmj  map1.json  map2.json  map3.json  map4.json  map5.json  prison.json  test.json
src/: Animation.cpp  Attribute.cpp  Entity.cpp  Game.cpp  GameState.cpp  Hitbox.cpp  Main.cpp  MenuState.cpp  Monster.cpp  Movement.cpp  Player.cpp  Resource.cpp  Shade.cpp  State.cpp  Subtitle.cpp  Tilemap.cpp  game.cpp  main.cpp  state.cpp
