cmake_minimum_required(VERSION 3.5.0)
set(CMAKE_CXX_STANDARD 20)
project(GAME)
set(SFML_DIR ./SFML/lib/cmake/SFML)
find_package(SFML COMPONENTS graphics window system audio REQUIRED)
include_directories(include)
aux_source_directory(./src SOURCES)
add_executable(GAME WIN32 ${SOURCES} icon.rc)
add_link_options(GAME PRIVATE -mwindows)
target_link_libraries(GAME sfml-graphics sfml-window sfml-system sfml-audio)
